# rofi-toys

./: .gitignore  Cargo.toml  README.md  encoders
.github/workflows/: build.yml
py/: containers  notes
rofi-toys-rs/: Cargo.toml
rofi-toys-rs/src/clipc/: main.rs
rofi-toys-rs/src/clipd/: http_rpc.rs  manager.rs  stroage.rs
rofi-toys-rs/src/containers/: main.rs
rofi-toys-rs/src/encoders/: main.rs
rofi-toys-rs/src/lib/: clipboard.rs  rofi.rs
rofi-toys-rs/src/lib/rofi/: rofi.rs
src/clipc/: main.rs
src/clipd/: main.rs  manager.rs  stroage.rs
src/containers/: main.rs
src/encoders/: main.rs
src/iwctl/: service.rs
src/iwmenu/: agent.rs  main.rs
src/lib/: clipboard.rs  file.rs  mod.rs  rofi.rs  utils.rs
src/notes/: main.rs
