[package]
name = "rofi-toys-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[[bin]]
name = "encoders"
path = "src/encoders/main.rs"

[[bin]]
name = "clipd"
path = "src/clipd/main.rs"

[[bin]]
name = "clipc"
path = "src/clipc/main.rs"

[[bin]]
name = "containers"
path = "src/containers/main.rs"

[[bin]]
name = "notes"
path = "src/notes/main.rs"

[[bin]]
name = "iwctl"
path = "src/iwctl/main.rs"

[lib]
name = "rofi_toys"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_toml = "0.0.1"
once_cell = "1.18.0"
form_urlencoded = "1.2.0"
gtk = "0.18.1"
log = "0.4.20"
actix-web = "4"
isahc = "1.7.2"
http = "0.2.9"
chrono = "0.4.31"
docker-api = "0.14"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
byte-unit = "4.0.19"
dirs = "5.0.1"
toml = "0.8.8"

# encodings
base64 = "0.21.4"
hex = "0.4.3"
urlencoding = "2.1.3"
percent-encoding = "2.3.0"
html-escape = "0.2.13"
regex = "1.9.5"
rand = "0.8.5"
md-5 = "0.10.5"
sha2 = "0.10.7"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"


# python binding for pyeval
[dependencies.pyo3]
version = "0.19.2"
features = ["auto-initialize"]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]
