[package]
name = "rofi-toys-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "encoders"
path = "src/encoders/main.rs"

[lib]
name = "rofi"
path = "src/lib/rofi/rofi.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
