[package]
name = "rofi-toys-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "encoders"
path = "src/encoders/main.rs"

[lib]
name = "rofi_toys"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.2.1"
once_cell = "1.18.0"
regex = "1.9.5"

# encodings
base64 = "0.21.4"
hex = "0.4.3"
urlencoding = "2.1.3"
percent-encoding = "2.3.0"
html-escape = "0.2.13"
