[package]
name = "rofi-toys-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "encoders"
path = "src/encoders/main.rs"

[[bin]]
name = "clipd"
path = "src/clipd/main.rs"

[[bin]]
name = "containers"
path = "src/containers/main.rs"

[[bin]]
name = "notes"
path = "src/notes/main.rs"

[lib]
name = "rofi_toys"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.2.1"
once_cell = "1.18.0"
regex = "1.9.5"
rand = "0.8.5"
md-5 = "0.10.5"
sha2 = "0.10.7"
form_urlencoded = "1.2.0"

# encodings
base64 = "0.21.4"
hex = "0.4.3"
urlencoding = "2.1.3"
percent-encoding = "2.3.0"
html-escape = "0.2.13"

# python binding for pyeval
[dependencies.pyo3]
version = "0.19.2"
features = ["auto-initialize"]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]
